--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ deploy:
   local_dir: dist/
   github_token: $GITHUB_TOKEN # Set in the settings page of your repository, as a secure variable
   keep_history: false
-  name: brian
-  email: brian@toimc.com
+  name: wangjiankang
+  email: wangjiankang_wjk@qq.com
   on:
     branch: master
